# Quilt-Impl

./: CHANGELOG.md  README.md  adjoint-meta-impl.cabal  cabal.project  elevator-core.cabal  elevatori  quilt-core.cabal  quilti
app/: Main.hs
elevator-core/: README.md  elevator-core.cabal
elevator-core/app/: Main.hs
elevator-core/examples/LinMeta/: map_lin.elev  map_lin_meta_eff.elev
elevator-core/examples/TwoMode/: eff_nth.elev  eff_pow.elev  nth.elev
elevator-core/examples/box/: effPow.adj  pow.adj
elevator-core/src/Elevator/: Evaluator.hs  ModeSpec.hs  Parser.hs  PrettyPrinter.hs  Substitution.hs  Syntax.hs  Top.hs  TypeChecker.hs
elevator-core/src/Elevator/ExampleModes/: LinMeta.hs  PrivacyModes.hs  TwoModes.hs
elevator-lambda-box/: elevator-lambda-box.cabal
elevator-lambda-box/app/: Main.hs
elevator-lambda-box/src/ElevatorExt/LambdaBox/: Compiler.hs  ModeSpec.hs  Parser.hs  Syntax.hs
elevator-linear/: elevator-linear.cabal
elevator-linear/app/: Main.hs
elevator-linear/examples/: pow.adj
elevator-linear/src/ElevatorExt/LambdaBox/: Compile.hs  ModeSpec.hs  PrettyPrinter.hs
elevator-linear/src/ElevatorExt/Linear/: Compile.hs  ModeSpec.hs  Parser.hs  PrettyPrinter.hs  Syntax.hs
examples/LinMeta/: array.elev  eff_map_lin_meta.elev  map_array.elev  map_lin.elev  map_lin_meta.elev  map_lin_meta_eff.elev  map_lin_meta_more_eff.elev  more_eff_map_lin_meta.elev
examples/ModesAAB/: ffc_comb.quilt
examples/ModesABC/: memo_ffc.quilt
examples/ThreeModes/: memo_ffc.quilt
examples/TwoIntModes/: eff_nth.quilt  eff_pow.quilt  nth.quilt  pow.quilt
examples/TwoModes/: eff_nth.elev  eff_nth.quilt  eff_pow.quilt  fcd_quicksort.quilt  ffc.quilt  memo_ffc.quilt  nth.elev  pow.elev  pow.quilt
old/LinMeta/: map_array.quilt  map_lin.quilt  map_lin_meta.quilt
src/Elevator/: Evaluator.hs  ModeSpec.hs  Parser.hs  PrettyPrinter.hs  Substitution.hs  Syntax.hs  Top.hs  TypeChecker.hs
src/Elevator/ExampleModes/: InfoFlowModes.hs  TwoModes.hs
src/Quilt/: Evaluator.hs  ModeSpec.hs  Parser.hs  PrettyPrinter.hs  Substitution.hs  Syntax.hs  Top.hs  TypeChecker.hs
src/Quilt/ExampleModes/: InfoFlowModes.hs  LinMeta.hs  ThreeModes.hs  ThreeModesAAB.hs  ThreeModesABC.hs  TwoIntModes.hs  TwoModes.hs
