cabal-version:      2.4
name:               adjoint-meta-impl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Junyoung/Clare Jang
maintainer:         jjc9310@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Elevator.ModeSpec
                    , Elevator.Syntax
                    , Elevator.TypeChecker

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , containers ^>=0.6.5.1
                    , transformers ^>=0.5.6.2
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable adjoint-meta-impl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        adjoint-meta-impl

    hs-source-dirs:   app
    default-language: Haskell2010
