cabal-version:      2.4
name:               adjoint-meta-impl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Junyoung/"Clare" Jang
maintainer:         junyoung.jang@mail.mcgill.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Elevator.ModeSpec
    Elevator.Parser
    Elevator.Syntax
    Elevator.TypeChecker

  -- Modules included in this library but not exported.
  -- other-modules:

  build-depends:
    , base                ^>=4.16.4.0
    , containers          ^>=0.6.5.1
    , extra               ^>=1.7.12
    , megaparsec          ^>=9.2.2
    , mtl                 ^>=2.2.2
    , parser-combinators  ^>=1.3
    , text                ^>=1.2.5.0
    , transformers        ^>=0.5.6.2

  hs-source-dirs:   src
  default-language: GHC2021

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  ghc-options:      -Wall

executable adjoint-two-mode
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  build-depends:
    , adjoint-meta-impl
    , base               ^>=4.16.4.0
    , containers         ^>=0.6.5.1
    , megaparsec         ^>=9.2.2
    , text               ^>=1.2.5.0

  hs-source-dirs:   app
  default-language: GHC2021

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  ghc-options:      -Wall
