cabal-version:      2.4
name:               adjoint-meta-impl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Junyoung/"Clare" Jang
maintainer:         junyoung.jang@mail.mcgill.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Elevator.ModeSpec
    Elevator.Parser
    Elevator.Syntax
    Elevator.TypeChecker
    Elevator.Evaluator
    Elevator.PrettyPrinter

  -- Modules included in this library but not exported.
  -- other-modules:

  build-depends:
    , array                       ^>=0.5.4.0
    , base                        ^>=4.16.4.0
    , bytestring                  ^>=0.12.0.2
    , containers                  ^>=0.6.8
    , directory                   ^>=1.3.6.2
    , extra                       ^>=1.7.12
    , filepath                    ^>=1.4.2.3
    , hashable                    ^>=1.4.3.0
    , megaparsec                  ^>=9.5
    , mtl                         ^>=2.3.1
    , optparse-applicative        ^>=0.18.1.0
    , parser-combinators          ^>=1.3
    , prettyprinter               ^>=1.7.1
    , prettyprinter-ansi-terminal ^>= 1.1.3
    , text                        ^>=2.1
    , transformers                ^>=0.6.1.1
    , unordered-containers        ^>=0.2.19.1

  hs-source-dirs:   src
  default-language: GHC2021

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  ghc-options:      -Wall

executable adjoint-two-mode
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  build-depends:
    , adjoint-meta-impl
    , base               ^>=4.16.4.0
    , containers         ^>=0.6.8
    , hashable           ^>=1.4.3.0
    , megaparsec         ^>=9.5
    , text               ^>=2.1

  hs-source-dirs:   app
  default-language: GHC2021

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  ghc-options:      -Wall
